--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Vitals Tracker v1.18A08 -->
+<!-- Vitals Tracker v1.18A81 -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -271,12 +271,13 @@
       flex-wrap:wrap;
     }
 
+    /* v1.18A81: compact log entry (more items visible) */
     .entry{
       border:1px solid var(--stroke);
       background: rgba(255,255,255,.03);
       border-radius: 22px;
-      padding: 14px 14px 12px;
-      margin-top: 12px;
+      padding: 10px 10px 8px; /* tightened */
+      margin-top: 8px;        /* tightened */
       touch-action: manipulation;
     }
 
@@ -291,46 +292,41 @@
       display:flex;
       justify-content:space-between;
       align-items:flex-end;
-      gap:12px;
-      margin-bottom: 6px;
+      gap:10px;              /* tightened */
+      margin-bottom: 2px;    /* tightened */
     }
     .entryTime{
-      font-size:14px;
+      font-size:13px;        /* slightly smaller */
       color: rgba(235,245,255,.46);
       white-space:nowrap;
     }
     .entryBPHR{
       display:flex;
       justify-content:space-between;
-      gap:12px;
+      gap:10px;              /* tightened */
       align-items:baseline;
     }
+
+    /* v1.18A81: unify BP/HR label + readings to same smaller size */
     .bpBig{
-      font-size:34px;
+      font-size:24px;
       font-weight:800;
-      letter-spacing:.2px;
-    }
-    /* v1.18A08: reduce BP label size by 50% (numbers remain large) */
-    .bpLabel{
-      font-size:.5em;
-      font-weight:800;
-      letter-spacing:.2px;
-      margin-right:8px;
-      display:inline-block;
-      transform: translateY(-2px);
-      color: rgba(235,245,255,.70);
+      letter-spacing:.1px;
+      white-space:nowrap;
     }
     .hrBig{
-      font-size:28px;
+      font-size:24px;
       font-weight:800;
       color: rgba(235,245,255,.72);
       white-space:nowrap;
+      letter-spacing:.1px;
     }
+
     .entryLine{
-      margin-top: 6px;
+      margin-top: 4px;       /* tightened */
       color: rgba(235,245,255,.62);
-      font-size:16px;
-      line-height:1.25;
+      font-size:15px;        /* slightly smaller */
+      line-height:1.15;      /* tighter */
     }
     .entryLine b{
       color: rgba(235,245,255,.70);
@@ -446,7 +442,7 @@
         <div class="subtle">Data stays on your phone (local only).</div>
 
         <div class="footerTiny">
-          <div>v1.18A08</div>
+          <div>v1.18A81</div>
           <div>developed by Keyth Jyles</div>
         </div>
       </div>
@@ -535,7 +531,7 @@
 (() => {
   "use strict";
 
-  const APP_VERSION = "v1.18A08";
+  const APP_VERSION = "v1.18A81";
   const STORAGE_KEY = "vitals_tracker_records_v1";
   const SYMPTOMS = [
     "Sweaty","Dizzy","Panic","Brain fog","Chest tight","Headache",
@@ -930,7 +926,7 @@
 
       const bp = document.createElement("div");
       bp.className = "bpBig";
-      bp.innerHTML = `<span class="bpLabel">BP</span>${escapeHtml(`${r.sys ?? "—"}/${r.dia ?? "—"}`)}`;
+      bp.textContent = `BP ${r.sys ?? "—"}/${r.dia ?? "—"}`;
 
       const hr = document.createElement("div");
       hr.className = "hrBig";
@@ -1031,7 +1027,7 @@
     baseMax: 0,   // week end   23:59:59.999
     viewMin: 0,   // pan/zoom view within base
     viewMax: 0,
-    minSpan: 48*60*60*1000, // v1.18A08: maximum zoom-in is 48 hours width
+    minSpan: 48*60*60*1000, // v1.18A81: max zoom-in = 48 hours width
     maxSpan: 7*DAY_MS,      // 7 days max span (week)
     pinch: null,         // {dist, viewMin, viewMax, centerTs}
     pan: null            // {x0, viewMin, viewMax}
